ft_containers-unit-test/logs.txt
In file included from ../vector_tests/operator >=.cpp:2:
In file included from ../vector_tests/__service.ipp:3:
../vector_tests/../../../Vector.hpp:224:41: error: no viable conversion from returned value of type 'const ft::VectorBase<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::pointer' (aka 'std::__1::basic_string<char> *const') to function return type 'ft::Vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::const_iterator' (aka 'random_access_iterator<const std::__1::basic_string<char> >')
        const_iterator                  begin() const {return this->m_begin;}
                                                              ^~~~~~~~~~~~~
../vector_tests/../../../Vector.hpp:559:41: note: in instantiation of member function 'ft::Vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(), rhs.begin(), rhs.end());
                                               ^
../vector_tests/../../../Vector.hpp:581:12: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        if (!(lhs < rhs))
                  ^
../vector_tests/operator >=.cpp:27:31: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >' requested here
    result_2.push_back(V_str1 >= V_str2);
                              ^
../vector_tests/../../../Iterator.hpp:101:4: note: candidate constructor not viable: no known conversion from 'const ft::VectorBase<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::pointer' (aka 'std::__1::basic_string<char> *const') to 'int *' for 1st argument
        random_access_iterator(int* x) : val(x) {}
        ^
../vector_tests/../../../Iterator.hpp:102:4: note: candidate constructor not viable: no known conversion from 'const ft::VectorBase<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::pointer' (aka 'std::__1::basic_string<char> *const') to 'const ft::random_access_iterator<const std::__1::basic_string<char> > &' for 1st argument
        random_access_iterator(const random_access_iterator& mit) : val(mit.val) {}
        ^
In file included from ../vector_tests/operator >=.cpp:2:
In file included from ../vector_tests/__service.ipp:3:
../vector_tests/../../../Vector.hpp:226:39: error: no viable conversion from returned value of type 'const ft::VectorBase<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::pointer' (aka 'std::__1::basic_string<char> *const') to function return type 'ft::Vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::const_iterator' (aka 'random_access_iterator<const std::__1::basic_string<char> >')
        const_iterator                  end() const {return (this->m_end);}
                                                            ^~~~~~~~~~~~~
../vector_tests/../../../Vector.hpp:559:54: note: in instantiation of member function 'ft::Vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(), rhs.begin(), rhs.end());
                                                            ^
../vector_tests/../../../Vector.hpp:581:12: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        if (!(lhs < rhs))
                  ^
../vector_tests/operator >=.cpp:27:31: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >' requested here
    result_2.push_back(V_str1 >= V_str2);
                              ^
../vector_tests/../../../Iterator.hpp:101:4: note: candidate constructor not viable: no known conversion from 'const ft::VectorBase<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::pointer' (aka 'std::__1::basic_string<char> *const') to 'int *' for 1st argument
        random_access_iterator(int* x) : val(x) {}
        ^
../vector_tests/../../../Iterator.hpp:102:4: note: candidate constructor not viable: no known conversion from 'const ft::VectorBase<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >::pointer' (aka 'std::__1::basic_string<char> *const') to 'const ft::random_access_iterator<const std::__1::basic_string<char> > &' for 1st argument
        random_access_iterator(const random_access_iterator& mit) : val(mit.val) {}
        ^
2 errors generated.
'B **') to 'const ft::random_access_iterator<B *> &' for 1st argument
        random_access_iterator(const random_access_iterator& mit) : val(mit.val) {}
        ^
In file included from ../vector_tests/insert(range).cpp:2:
In file included from ../vector_tests/__service.ipp:3:
../vector_tests/../../../Vector.hpp:450:29: error: invalid operands to binary expression ('ft::Vector<A, std::__1::allocator<A> >::iterator' (aka 'random_access_iterator<A>') and 'ft::VectorBase<A, std::__1::allocator<A> >::pointer' (aka 'A *'))
                size_type       _pos = position - this->m_begin;
                                       ~~~~~~~~ ^ ~~~~~~~~~~~~~
../vector_tests/insert(range).cpp:86:14: note: in instantiation of function template specialization 'ft::Vector<A, std::__1::allocator<A> >::insert<ft::random_access_iterator<B *> >' requested here
    try { vv.insert(vv.begin(), v1.begin(), v1.end()); }
             ^
../vector_tests/insert(range).cpp:97:68: note: in instantiation of function template specialization 'insert_test_3<int>' requested here
    exit(run_vector_unit_test<int>("insert(range)", insert_test_3, insert_test_3));
                                                                   ^
../vector_tests/../../../Iterator.hpp:113:25: note: candidate function not viable: no known conversion from 'ft::VectorBase<A, std::__1::allocator<A> >::pointer' (aka 'A *') to 'ft::random_access_iterator<A>::difference_type' (aka 'long') for 1st argument
        random_access_iterator  operator-(difference_type n) const {return random_access_iterator(val - n);}
                                ^
../vector_tests/../../../Iterator.hpp:114:13: note: candidate function not viable: no known conversion from 'ft::VectorBase<A, std::__1::allocator<A> >::pointer' (aka 'A *') to 'ft::random_access_iterator<A>' for 1st argument
        size_t                                  operator-(random_access_iterator n) const {return static_cast<size_t>(val - n.val);}
                                                ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:865:1: note: candidate template ignored: could not match 'reverse_iterator' against 'random_access_iterator'
operator-(const reverse_iterator<_Iter1>& __x, const reverse_iterator<_Iter2>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:1301:1: note: candidate template ignored: could not match 'move_iterator' against 'random_access_iterator'
operator-(const move_iterator<_Iter1>& __x, const move_iterator<_Iter2>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:1713:1: note: candidate template ignored: could not match '__wrap_iter' against 'random_access_iterator'
operator-(const __wrap_iter<_Iter1>& __x, const __wrap_iter<_Iter2>& __y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:558:11: note: candidate template ignored: could not match 'fpos' against 'random_access_iterator'
streamoff operator-(const fpos<_StateT>& __x, const fpos<_StateT>& __y)
          ^
4 errors generated.
